ok REALLY fix spacing issue now

--- a/travel/style.css
+++ b/travel/style.css
@@ -172,6 +172,7 @@ input[type="checkbox"]{
 .checkboxField{
   align-self: stretch;
   justify-content: center;
+  padding-top: 4px;
 }
 
 .checkboxLabel{
